docs: プライバシーポリシーを現行方針へ更新\n\n- IndexedDB/SQLite の記載に統一\n- バックアップは手動のみ外部依存なしを明記\n- 最終更新日を 2025-11-27 に更新

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <h1>プライバシーポリシー</h1>
-    <p class="update-date">最終更新日: 2025年11月26日</p>
+    <p class="update-date">最終更新日: 2025年11月27日</p>
 
     <h2>1. はじめに</h2>
     <p>
@@ -45,7 +45,7 @@
     <h2>2. 収集する情報</h2>
     <h3>2.1 Local First アーキテクチャ</h3>
     <p>
-        本アプリは「Local First」設計を採用しており、<strong>学習データ（参考書情報、カード復習履歴、学習実績など）は全て端末内のSQLiteデータベースに保存され、外部サーバーへは送信されません。</strong>
+        本アプリは「Local First」設計を採用しており、<strong>学習データ（参考書情報、カード復習履歴、学習実績など）は全て端末内のデータベース（Web: IndexedDB / Native: SQLite）に保存され、外部サーバーへは送信されません。</strong>
     </p>
 
     <h3>2.2 カメラ権限</h3>
@@ -81,9 +81,9 @@
 
     <h2>5. データのバックアップ</h2>
     <p>
-        本アプリでは、ユーザーが手動でJSON形式のバックアップをエクスポートできます。
-        エクスポートされたファイルは、ユーザーがGoogle DriveやiCloud等の任意のストレージサービスに保存することができますが、
-        開発者はそれらのファイルにアクセスすることはできません。
+        本アプリでは、ユーザーが手動でJSON形式のバックアップをエクスポート/インポートできます。自動・クラウド連携によるバックアップ機能は提供していません。
+        エクスポートされたファイルは、ユーザーがGoogle DriveやiCloud等の任意のストレージサービスに<strong>手動で</strong>保存することができますが、
+        開発者がそれらのファイルにアクセスすることはありません（外部依存なし、維持費ゼロの方針）。
     </p>
 
     <h2>6. データの削除</h2>
